# QtGrace6

./: CMakeLists.txt  Doxyfile  README.md
CompressorDecompressor/: CompressorDecompressor.pro  compressdecompress.cpp  compressdecompress.h  mainwindow.cpp  mainwindow.h
doc/: QTGRACE_EXTENSIONS.html  README_QTGRACE.txt
examples/: Circle_Fit.agr  PolarPlotV2_Example.agr  explain.agr  fills.agr  filterexample.agr  script_example.agr  symslines.agr  tstack.agr
examples/qtclient/: client.cpp  client.h  communicationsProtocol.cc  communicationsProtocol.h  main.cpp  qtgraceclient.pro
libharu64/libhpdf/: hpdf.h  hpdf_conf.h  hpdf_utils.h  libhpdf.cpp  libhpdf.h  libhpdf.pro
scripts/: Remove_Const_Offset.com  Remove_Linear_Offset.com  Remove_Sin_Offset.com  examples_script.com
src/: KeyAndMousePressFilter.cpp  KeyAndMousePressFilter.h  ListOfLatexCommands.cpp  MainWindow.cpp  MainWindow.h  Server.cpp  Server.h  acosh.c  airy.c  allWidgets.cpp  allWidgets.h  appearanceWidgets.cpp  appearanceWidgets.h  as274c.cpp  asinh.c  atanh.c  beta.c  bitmaps.h  cbrt.c  cephes.h  chbevl.c  chdtr.c  cmath.h  compressdecompress.cpp  compressdecompress.h  computils.cpp  config.h  dates.cpp  defaults.cpp  defines.h  device.cpp  device.h  devlist.h  dlmodule.cpp  dlmodule.h  draw.cpp  draw.h  drawticks.cpp  dummydrv.cpp  editWidgets.cpp  (+123 more)
src/include/: hpdf_config.h
templates/: DefaultBEAST.agr  Default_A4.agr  QtGrace_std_bin_format_qtgrace.fmt  QtGrace_std_bin_format_wav.fmt
type1/: arith.c  blues.h  bstring.c  curves.c  fontfcn.c  hints.c  hints.h  lines.c  objects.c  objects.h  paths.c  paths.h  regions.c  regions.h  scanfont.c  spaces.c  t1io.c  t1snap.c  t1stdio.h  token.c  type1.c  util.c  util.h
